# ZoneMinder

./: .build.mk  .dockerignore  .eslintignore  .gitignore  .travis.yml  CMakeLists.txt  DOCKER-DEV.md  FORK-WORKFLOW.md  Makefile.dev  QUICKSTART-DEV.md  README.md  SAFARI_DEBUG_QUICK_REFERENCE.md  SAFARI_MONTAGE_DEBUG_INSTRUCTIONS.md  SECURITY_AUDIT.md  ZONEMINDER_MODERNIZATION_ROADMAP.public.html  configure.ac  docker-compose.dev.yml  eslint.config.js  sync-fork.sh  zoneminder-config.cmake
.github/workflows/: build-native-packages.yml  create-packages.yml  full-release-archive.yml
cmake/Modules/: FindGSOAP.cmake
conf.d/: 03-stream-socket.conf.in
db/: CMakeLists.txt  zm_create.sql.in
db/migrations/: 00000000_000000_bootstrap.sql
distros/debian/: control
distros/debian8/: control
distros/fedora/: zoneminder.f22.spec  zoneminder.f23.spec
distros/redhat/: zoneminder.el6.spec  zoneminder.el7.spec  zoneminder.spec
distros/ubuntu1204/: apache.conf  postinst
distros/ubuntu1604/: zoneminder.postinst
distros/ubuntu2004/: zoneminder.postinst
docker/: Dockerfile.dev  capture-ui.sh  entrypoint.sh  test-screenshot.js
docker/mysql/: zm.cnf
docs/: DEPRECATION_ANALYSIS.md  index.rst  stream_socket.rst
docs/installationguide/: index.rst
misc/: CMakeLists.txt
plugins/libzm_plugin_openalpr/src/: openalpr_plugin.h
scripts/: zmpkg.pl.in  zmupdate.pl.in
scripts/ZoneMinder/lib/ZoneMinder/: ConfigData.pm.in  Memory.pm.in
src/: CMakeLists.txt  Makefile.am  zm_comms.cpp  zm_comms.h  zm_config.cpp  zm_config.h  zm_detector.cpp  zm_detector.h  zm_event.cpp  zm_event.h  zm_eventstream.cpp  zm_ffmpeg.cpp  zm_ffmpeg.h  zm_ffmpeg_camera.cpp  zm_ffmpeg_camera.h  zm_fifo.cpp  zm_fifo.h  zm_hls.cpp  zm_hls.h  zm_image.h  zm_image_analyser.cpp  zm_image_analyser.h  zm_local_camera.h  zm_logger.cpp  zm_logger.h  zm_mem_utils.h  zm_monitor.cpp  zm_monitor.h  zm_monitorstream.cpp  zm_monitorstream.h  zm_packetqueue.h  zm_plugin.cpp  zm_rgb.h  zm_rtsp.h  zm_rtsp_server.cpp  zm_rtsp_server_stream_adts_source.cpp  zm_rtsp_server_stream_adts_source.h  zm_rtsp_server_stream_audio_source.cpp  zm_rtsp_server_stream_audio_source.h  zm_rtsp_server_stream_av1_source.cpp  (+26 more)
src/api_bridge/: CMakeLists.txt  zm_api_bridge.cpp  zm_api_bridge.h
tests/: CMakeLists.txt  interpreter_config.json  zm_ffmpeg.cpp  zm_stream_socket.cpp  zm_stream_socket_client.cpp  zm_stream_socket_protocol.cpp
tests/e2e/: .gitignore  README.md  compare-results.js  package.json  playwright.config.js  safari-montage-debug.spec.js  setup.sh
tests/selenium/: homepage.json  running.json
tools/: zm_stream_socket_dump.py
utils/tests/: interpreter_config.json  sauce_listener.js
web/: index.php
web/ajax/: console.php
web/api/app/Config/: bootstrap.php.in
web/includes/: Monitor.php  actions.php  csrf-magic.php  csrf-secret.php  functions.php
web/js/: MonitorStream.js  safari-montage-debug.js  video-rtc.js
web/lang/: big5_big5.php  cs_cz.php  en_gb.php  ru_ru.php
web/skins/classic/includes/: export_functions.php  functions.php
web/skins/classic/js/: flat.js  skin.js
(+22 files in other folders)
